--- a/css/main.css
+++ b/css/main.css
@@ -3,22 +3,27 @@
     width:  1140px;
     margin:  0 auto 20px;
     text-align: center;
-} 
+}
 
 .navigation__list__item {
     padding: 10px;
     display: inline-block;
-} 
+}
 
 .navigation__list__item__link {
     color: #0B486B;
     text-decoration: none;
-} 
+}
 
 .navigation__list__item__link:hover {
     color: #79BD9A;
-} 
+}
 
 .navigation__list__item__link--active {
     color: #C44D58;
-} 
+}
+
+.txt {
+  background-color: skyblue;
+  font-size: 30px;
+}
